# mcp-python-starter

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  server.json  server.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  conformance.yml  copilot-setup-steps.yml  mcp-diff.yml
mcp_python_starter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mcp_starter/: __init__.py  icons.py  prompts.py  resources.py  server.py  tasks.py  tools.py
resources/: example.md
